# secure-dot-product

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
secureDotProduct/: mpc_mul_local.py  mpc_mul_proxy.py  run_secure_dot_product-2.py  run_secure_dot_product.py
tests/: test_local_mul.py  test_main.py
